Alex/Serial_ros2_ws/log/build_2022-07-26_16-06-01/serial_light_py/stderr.log
  File "/home/nvidia/Desktop/Serial_ros2_ws/install/serial_light_py/lib/python3.6/site-packages/serial_light_py/py_sub_data.py", line 21
    while True
             ^
SyntaxError: invalid syntax

